[project]
name = "external_server"
version = "4.9.0"
dependencies = [
    "bottle==0.12.25",
    "cryptography==40.0.2",
    "gevent==22.10.2",
    "ldap3==2.9.1",
    "lxml==4.9.2",
    "pymongo==4.3.3",
    "requests==2.28.2"
]

[project.optional-dependencies]
dev = [
    "bandit==1.7.5",
    "black==23.3.0",
    "coverage==7.2.3",
    "dlint==0.14.1",
    "mypy==1.2.0",
    "pep8-naming==0.13.3",
    "pip==23.1",
    "pip-audit==2.5.4",
    "pip-tools==6.13.0",  # To add hashes to requirements
    "pydantic==1.10.7",  # Needed for importing the data model in the tests from the shared data model component
    "pylint==2.17.2",
    "safety==2.4.0b1",  # The beta of safety 2.4.0 fixes a dependency conflict with packaging 23.0.
    "types-cryptography==3.3.23.2",
    "types-ldap3==2.9.13.12",
    "types-requests==2.28.11.17",
    "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
    "vulture==2.7"
]

[tool.mypy]
plugins = "pydantic.mypy"
html_report = "build/mypy"
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "bottle",
    "gevent",
    "lxml.html",
    "lxml.html.clean"
]
ignore_missing_imports = true
