[project]
name = "external_server"
version = "4.10.0"
dependencies = [
    "bottle==0.12.25",
    "cryptography==40.0.2",
    "gevent==22.10.2",
    "ldap3==2.9.1",
    "lxml==4.9.2",
    "pymongo==4.3.3",
    "requests==2.28.2"
]

[project.optional-dependencies]
dev = [
    "coverage==7.2.3",
    "pep8-naming==0.13.3",
    "pip==23.1.1",
    "pipx==1.2.0",
    "pip-tools==6.13.0",  # To add hashes to requirements
    "pydantic==1.10.7",  # Needed for importing the data model in the tests from the shared data model component
    "pylint==2.17.2",
    "types-cryptography==3.3.23.2",
    "types-ldap3==2.9.13.12",
    "types-requests==2.28.11.17",
    "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
]
tools = [
    "bandit==1.7.5",
    "black==23.3.0",
    "dlint==0.14.1",
    "mypy==1.2.0",
    "pip-audit==2.5.4",
    "safety==2.3.5",
    "vulture==2.7"
]

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "bottle",
    "gevent",
    "lxml.html",
    "lxml.html.clean"
]
ignore_missing_imports = true
