[project]
name = "notifier"
version = "5.57.0"
requires-python = "==3.14.5"
classifiers = [
    "Framework :: aiohttp",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp==3.14.1",
    "pymsteams==0.2.5",
    "python-dateutil==2.9.0.post0",
    "shared-code",
]

[dependency-groups]
dev = [
    "mongomock==4.3.0",
    "pydantic==2.13.4",                      # Needed for importing the data model in the tests from the shared code component
    "shared-test-code",
    "tools",
    "types-python-dateutil==2.9.0.20260518",
]

[tool.uv]
override-dependencies = [
    "msgpack==1.2.1"
]  # GHSA-6v7p-g79w-8964: MessagePack for Python: Out-of-bounds read / crash on Unpacker reuse after a caught error
sources.shared-code = { path = "../shared_code", package = true }
sources.shared-test-code = { path = "../../tests/shared_test_code", package = true }
sources.tools = { path = "../../tools/third_party", package = false }
exclude-newer = "7 days"
exclude-newer-package = { msgpack = false }

[tool.ruff]
line-length = 120
src = [
    "src",
]
lint.select = [
    "ALL",
]
lint.ignore = [
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/ - this rule may cause conflicts when used with the ruff formatter
    "D203",   # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/ - prevent warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`
    "D213",   # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/ - prevent warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`
    "FBT",    # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt - not sure of the value of preventing "boolean traps"
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/ - this rule may cause conflicts when used with the ruff formatter
    "PT",     # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt - pytest isn't used
    "TC006",  # https://docs.astral.sh/ruff/rules/runtime-cast-value/ - the rule claims it's often necessary to quote the first argument passed to cast(), but that's not the case in this code base
]
lint.per-file-ignores.".vulture-whitelist.py" = [
    "ALL",
]
lint.per-file-ignores."__init__.py" = [
    "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/ - don't require doc strings in __init__.py files
]
lint.per-file-ignores."src/main.py" = [
    "INP001", # https://docs.astral.sh/ruff/rules/implicit-namespace-package/ - false positive because this is the main script
]
lint.per-file-ignores."tests/**/*.py" = [
    "ANN201", # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function/ - don't require test functions to have return types
]
lint.isort.section-order = [
    "future",
    "standard-library",
    "third-party",
    "second-party",
    "first-party",
    "shared-test-code",
    "tests",
    "local-folder",
]
lint.isort.sections.second-party = [
    "shared",
    "shared_data_model",
]
lint.isort.sections.shared-test-code = [
    "shared_test_code",
]
lint.isort.sections.tests = [
    "tests",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true  # Don't remove trailing zero's from version specifiers

[tool.mypy]
ignore_missing_imports = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
incremental = false
overrides = [ { module = [
    "pymsteams",
], ignore_missing_imports = true } ]
