[build-system]
requires = [
    "pip==23.0.1",
    "pip-tools==6.12.3",
    "setuptools==67.6.1",
    "wheel==0.40.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "shared_data_model"
version = "4.8.0"
authors = [
  { name="Quality-time team", email="quality-time@ictu.nl" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English"
]
dependencies = [
    "pydantic==1.10.7",
]

[project.optional-dependencies]
dev = [
    "lxml==4.9.2",  # Needed to be able to run mypy with `--html-report`.
    "bandit==1.7.5",
    "black==23.3.0",
    "coverage==7.2.2",
    "dlint==0.14.0",
    "mypy==1.0.1",
    "pep8-naming==0.13.3",
    "pip-audit==2.4.12",
    "pylint==2.17.2",
    "safety==2.3.5",
    "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
    "vulture==2.7"
]

[project.urls]
"Homepage" = "https://github.com/ICTU/quality-time"
"Issue tracker" = "https://github.com/ICTU/quality-time/issues"
"Changelog" = "https://quality-time.readthedocs.io/en/latest/changelog.html"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
plugins = "pydantic.mypy"
html_report = "build/mypy"
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
