[project]
name = "shared_data_model"
version = "4.8.0"
dependencies = [
    "pydantic == 1.10.7"
]

[project.optional-dependencies]
dev = [
    "bandit==1.7.5",
    "black==23.3.0",
    "coverage==7.2.3",
    "dlint==0.14.0",
    "lxml==4.9.2",  # Needed to be able to run mypy with `--html-report`.
    "mypy==1.2.0",
    "pep8-naming==0.13.3",
    "pip==23.0.1",
    "pip-audit==2.5.4",
    "pip-tools==6.13.0",  # To add hashes to requirements
    "pylint==2.17.2",
    "safety==2.4.0b1",  # The beta of safety 2.4.0 fixes a dependency conflict with packaging 23.0.
    "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
    "vulture==2.7"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
plugins = "pydantic.mypy"
html_report = "build/mypy"
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
