[project]
name = "shared_data_model"
version = "4.10.0"
dependencies = [
    "pydantic==1.10.7"
]

[project.optional-dependencies]
dev = [
    "coverage==7.2.3",
    "pep8-naming==0.13.3",
    "pip==23.1.2",
    "pipx==1.2.0",
    "pip-tools==6.13.0",  # To add hashes to requirements
    "pylint==2.17.2",
    "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
]
tools = [
    "bandit==1.7.5",
    "black==23.3.0",
    "dlint==0.14.1",
    "mypy==1.2.0",
    "pip-audit==2.5.4",
    "pydantic==1.10.7",
    "safety==2.3.5",
    "vulture==2.7"
]

[tool.black]
line-length = 120

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
where = ["src"]
